test/Dialect/LLZK/Inputs/header_6.llzk
// Imported via `include_fail.llzk`

module attributes {veridise.lang = "llzk"} {
  // expected-error@+1 {{Array dimension must be one of ['builtin.integer', 'builtin.symbol_ref', 'builtin.affine_map'] but found 'builtin.type'}}
  llzk.func private @b(%x: !llzk.array<!llzk.felt>) 
}
